--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ group 'com.sardeni'
 version '1.0-SNAPSHOT'
 
 
-
 repositories {
     mavenCentral()
 }
@@ -46,6 +45,7 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.withType(Test) {
+    systemProperties(System.getProperties())
     useJUnitPlatform()
 
     testLogging {
@@ -53,5 +53,17 @@ tasks.withType(Test) {
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
+    }
+}
+
+task smoke_tests(type: Test) {
+    useJUnitPlatform {
+        includeTags("smoke")
+    }
+}
+
+task one_property_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("one_property")
     }
 }
