--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,6 @@ task smoke_tests(type: Test) {
 
 task one_property_test(type: Test) {
     useJUnitPlatform {
-        includeTags("one_property")
+        includeTags("regress")
     }
 }
